fixed spacing in mobile view

--- a/css/lizstyle.css
+++ b/css/lizstyle.css
@@ -226,6 +226,7 @@ footer {
 	}
 	.hello {
 		color: #00293C;
+		padding: 2% 20%;
 	}
 	.parallax {
 		height: 84%;
